# excel-to-sql

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: database_config.py  pipeline_config.py  pipeline_config.yaml  project_config.py  project_config.yaml
data/: README.md  messy_orders.xlsx
data/processed/: customers.csv  messy_orders_cleaned.xlsx  order_items.csv  orders.csv  products.csv
data/raw/: fake_data.xlsx  messy_orders.xlsx
docs/: Instructions for Preparing Your Excel File.odt
schemas/: column_definitions.py  customers.yaml  data_types.py  features.py  order_items.yaml  orders.yaml  products.yaml  table_schema.py
src/: cleaner.py  context.py  csv_writer.py  errors.py  excel_writer.py  extractor.py  finaliser.py  loader.py  logging_setup.py  parsers.py  pipeline.py  transformer.py  validator.py
src/excel_to_sql/: cleaner.py  context.py  csv_writer.py  errors.py  excel_writer.py  extractor.py  finaliser.py  loader.py  logging_setup.py  parsers.py  pipeline.py  sql_writer.py  transformer.py  validator.py
src/sql_writer/: engine_factory.py  sql_writer.py  table_builder.py
src/sql_writer/dialects/: base.py  mssql.py
tests/: conftest.py  factories.py  test_cleaner.py  test_extractor.py  test_pipeline.py  test_project_config.py  test_table_schema.py  test_transformer.py  test_transformer_apply_derived_column.py  test_transformer_apply_value_mapping.py  test_transformer_normalise_phone_numbers.py  test_transformer_strict_vs_permissive.py  test_validator.py
tests/data/: project.yaml
tests/utils/: app.py  fake_data_generator.py
utils/: helpers.py
