[project]
name = "excel-to-sql-pipeline"
version = "0.0.1"
description = "Configuration driven Excel to SQL pipeline"
authors = [
    {name = "Juliana Albertyn"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair (==6.0.0)",
    "attrs (==25.4.0)",
    "babel (==2.18.0)",
    "black (==26.1.0)",
    "blinker (==1.9.0)",
    "cachetools (==6.2.6)",
    "certifi (==2026.1.4)",
    "charset-normalizer (==3.4.4)",
    "click (==8.3.1)",
    "colorama (==0.4.6)",
    "dateparser (==1.3.0)",
    "dnspython (==2.8.0)",
    "email-validator (==2.3.0)",
    "et-xmlfile (==2.0.0)",
    "faker (==40.4.0)",
    "gitdb (==4.0.12)",
    "gitpython (==3.1.46)",
    "idna (==3.11)",
    "iniconfig (==2.3.0)",
    "jinja2 (==3.1.6)",
    "jsonschema (==4.26.0)",
    "jsonschema-specifications (==2025.9.1)",
    "logging (==0.4.9.6)",
    "markupsafe (==3.0.3)",
    "mypy-extensions (==1.1.0)",
    "narwhals (==2.16.0)",
    "numpy (==2.4.2)",
    "openpyxl (==3.1.5)",
    "packaging (==26.0)",
    "pandas (==2.3.3)",
    "pathspec (==1.0.4)",
    "pillow (==12.1.1)",
    "platformdirs (==4.9.2)",
    "pluggy (==1.6.0)",
    "protobuf (==6.33.5)",
    "pyarrow (==23.0.1)",
    "pydeck (==0.9.1)",
    "pygments (==2.19.2)",
    "pytest (==9.0.2)",
    "python-dateutil (==2.9.0.post0)",
    "pytokens (==0.4.1)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.3)",
    "referencing (==0.37.0)",
    "regex (==2026.1.15)",
    "requests (==2.32.5)",
    "rpds-py (==0.30.0)",
    "ruamel-yaml (==0.17.40)",
    "ruamel-yaml-clib (==0.2.15)",
    "ruff (==0.15.1)",
    "six (==1.17.0)",
    "smmap (==5.0.2)",
    "streamlit (==1.54.0)",
    "tenacity (==9.1.4)",
    "toml (==0.10.2)",
    "tornado (==6.5.4)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.3)",
    "tzlocal (==5.3.1)",
    "urllib3 (==2.6.3)",
    "watchdog (==6.0.0)",
    "yamlfmt (==1.1.1)",
    "yamllint (==1.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
